force-app/main/default/objects/PVL_Portal_User__c/PVL_Portal_User__c.object-meta.xml
<CustomObject>
    <label>PVL Portal User</label>
    <nameField>
        <displayFormat>UID-{000000}</displayFormat>
        <label>User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PVL Portal Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>