force-app/main/default/objects/PVL_Portal_User__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN08202020-Created for PVL CE and INS Portal</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PVL Portal Users</relationshipLabel>
    <relationshipName>PVL_Portal_Users</relationshipName>
    <type>Lookup</type>
</CustomField>