force-app/main/default/objects/PVL_Portal_User__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <externalId>true</externalId>
    <label>Entity Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>