force-app/main/default/objects/PVL_Portal_User__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>IF(
ISNULL(MiddleName__c),
First_Name__c &amp; &quot; &quot; &amp; Last_Name__c,
First_Name__c &amp; &quot; &quot; &amp; MiddleName__c &amp; &quot; &quot; &amp; Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>