force-app/main/default/objects/PVL_Portal_User__c/fields/LastFourofSSN__c.field-meta.xml
<CustomField>
    <fullName>LastFourofSSN__c</fullName>
    <label>Last 4 of SSN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>