force-app/main/default/objects/PVL_Portal_User__c/fields/LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>LicenseNumber__c</fullName>
    <externalId>true</externalId>
    <label>License Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>