force-app/main/default/objects/PVL_Portal_User__c/fields/NAICID__c.field-meta.xml
<CustomField>
    <fullName>NAICID__c</fullName>
    <externalId>true</externalId>
    <label>NAICID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>