force-app/main/default/objects/PVL_Portal_User__c/fields/NPNID__c.field-meta.xml
<CustomField>
    <fullName>NPNID__c</fullName>
    <externalId>true</externalId>
    <label>NPNID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>