force-app/main/default/objects/PVL_Portal_User__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <formula>Account__r.Provider__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider</label>
    <type>Checkbox</type>
</CustomField>