force-app/main/default/objects/PVL_Portal_User__c/fields/ProviderSchoolID__c.field-meta.xml
<CustomField>
    <fullName>ProviderSchoolID__c</fullName>
    <formula>Account__r.ProviderSchoolID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider / School ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>