force-app/main/default/objects/PVL_Portal_User__c/fields/ProviderSchoolPassword__c.field-meta.xml
<CustomField>
    <fullName>ProviderSchoolPassword__c</fullName>
    <label>Provider School Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>