force-app/main/default/objects/PVL_Portal_User__c/fields/ProviderSchoolStatus__c.field-meta.xml
<CustomField>
    <fullName>ProviderSchoolStatus__c</fullName>
    <formula>TEXT(Account__r.ProvicerSchoolStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider / School Status</label>
    <type>Text</type>
</CustomField>