force-app/main/default/objects/PVL_Portal_User__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <formula>Account__r.School__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School</label>
    <type>Checkbox</type>
</CustomField>