force-app/main/default/objects/PVL_Portal_User__c/fields/SecretAnswer__c.field-meta.xml
<CustomField>
    <fullName>SecretAnswer__c</fullName>
    <label>Secret Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>