force-app/main/default/objects/PVL_Portal_User__c/fields/SecretQuestion__c.field-meta.xml
<CustomField>
    <fullName>SecretQuestion__c</fullName>
    <label>Secret Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>