force-app/main/default/objects/PVL_Portal_User__c/fields/Suffiix__c.field-meta.xml
<CustomField>
    <fullName>Suffiix__c</fullName>
    <label>Suffiix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>