force-app/main/default/objects/PVL_Portal_User__c/fields/WordPress_User_Id__c.field-meta.xml
<CustomField>
    <fullName>WordPress_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>WordPress User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>