force-app/main/default/objects/PVL_Portal_User__c/listViews/All_PVL_Portal_Users.listView-meta.xml
<ListView>
    <fullName>All_PVL_Portal_Users</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>User_Name__c</columns>
    <columns>WordPress_User_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WordPress_User_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All PVL Portal Users</label>
</ListView>