force-app/main/default/objects/PVL_Portal_User__c/listViews/CE_Providers_and_Schools.listView-meta.xml
<ListView>
    <fullName>CE_Providers_and_Schools</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ProviderSchoolID__c</columns>
    <columns>ProviderSchoolPassword__c</columns>
    <columns>Provider__c</columns>
    <columns>ProviderSchoolStatus__c</columns>
    <columns>School__c</columns>
    <columns>SecretQuestion__c</columns>
    <columns>SecretAnswer__c</columns>
    <columns>WordPress_User_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProviderSchoolID__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ProviderSchoolID__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>CE Providers and Schools</label>
</ListView>