force-app/main/default/objects/PVL_Portal_User__c/listViews/Insurance_Portal_Users.listView-meta.xml
<ListView>
    <fullName>Insurance_Portal_Users</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LicenseNumber__c</columns>
    <columns>EntityId__c</columns>
    <columns>NPNID__c</columns>
    <columns>LastFourofSSN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EntityId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Insurance Portal Users</label>
</ListView>